# Pysydyn

./: README.md
02 - Architecture/: Architecture_of_PysyDyn.drawio
03 - Code/: PysyDyn.ipynb  __init__.py  ksolve_testing.py  turbie_and_floaty.py  windy_and_wavy.py
03 - Code/Configuration_Files/: PysyDn_Floaty_Default.csv  PysyDyn_Turbie_Default.csv  PysyDyn_Windy_Wavy_Default.csv
03 - Code/Wind_Wave/Wind_and_Wave_series/: Series_Hs_5.0_tp_11.0_z_bot_300.0_V_9.0_TI_0.15_z_hub_119.0_time_600.0_dt_0.1.csv  Series_Hs_5_tp_11_z_bot_300_V_9_TI_0.15_z_hub_119_time_600_dt_0.1.csv
03 - Code/z. SS/: # Old_constant_file.py  turbine_class_V1.py  turbine_main.py
04 - Results/: ksolve maple document.mw
05 - Package/: pyproject.toml
05 - Package/pysydyn_package/: __init__.py  turbie_and_floaty.py  windy_and_wavy.py
05 - Package/pysydyn_package/Configuration_Files/: PysyDn_Floaty_Default.csv  PysyDyn_Turbie_Default.csv  PysyDyn_Windy_Wavy_Default.csv
